force-app/main/default/objects/Lead/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>PON Account Number</description>
    <label>Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>