force-app/main/default/objects/Lead/fields/BDVP__c.field-meta.xml
<CustomField>
    <fullName>BDVP__c</fullName>
    <label>BDVP</label>
    <length>25</length>
    <type>Text</type>
</CustomField>