force-app/main/default/objects/Lead/fields/Conference_Trade_Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Conference_Trade_Show_Name__c</fullName>
    <inlineHelpText>If applicable, enter the Conference / Trade Show Name here.  If not applicable, leave blank.</inlineHelpText>
    <label>Conference/Trade Show Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>