force-app/main/default/objects/Lead/fields/Estimated_Eligible_Customer_File_Size__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Eligible_Customer_File_Size__c</fullName>
    <inlineHelpText>Information found from company 10K reporting, investment relations or annual reports may be able to provide guidance in populating these fields</inlineHelpText>
    <label>Estimated Eligible Customer File Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>