force-app/main/default/objects/Lead/fields/Estimated_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Revenue__c</fullName>
    <inlineHelpText>Information found from company 10K reporting, investment relations or annual reports may be able to provide guidance in populating these fields</inlineHelpText>
    <label>Estimated Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>