force-app/main/default/objects/Lead/fields/Lead_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_ID__c</fullName>
    <description>Identifies the source of the lead (e.x. CES Trade Show Jan 2020)</description>
    <inlineHelpText>This identifies the source of the lead.</inlineHelpText>
    <label>Lead Source ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>