force-app/main/default/objects/Lead/fields/NBD__c.field-meta.xml
<CustomField>
    <fullName>NBD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NBD</label>
    <type>Checkbox</type>
</CustomField>