force-app/main/default/objects/Lead/fields/Trade__c.field-meta.xml
<CustomField>
    <fullName>Trade__c</fullName>
    <description>Trade picklist for PON Lead Object</description>
    <inlineHelpText>Select a trade from this list.</inlineHelpText>
    <label>Trade</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Appliance</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>