force-app/main/default/objects/Lead/fields/Whitehawk__c.field-meta.xml
<CustomField>
    <fullName>Whitehawk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box for Leads to be worked by Whitehawk.</description>
    <inlineHelpText>Check this box for Leads to be worked by Whitehawk.</inlineHelpText>
    <label>Whitehawk</label>
    <type>Checkbox</type>
</CustomField>