force-app/main/default/objects/Lead/recordTypes/PON.recordType-meta.xml
<RecordType>
    <fullName>PON</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>PON</label>
</RecordType>