force-app/main/default/objects/Lead/listViews/Lead_Source_Real_Estate.listView-meta.xml
<ListView>
    <fullName>Lead_Source_Real_Estate</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.INDUSTRY</field>
        <operation>equals</operation>
        <value>Real Estate</value>
    </filters>
    <label>Lead Source = Real Estate</label>
</ListView>