force-app/main/default/objects/Lead/listViews/Lead_Status_Contacted_Dec_Maker_15.listView-meta.xml
<ListView>
    <fullName>Lead_Status_Contacted_Dec_Maker_15</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Contacted Decision Maker,Contacted Decision Maker - 15%</value>
    </filters>
    <label>Lead Status = Contacted Dec Maker 15%</label>
</ListView>