force-app/main/default/objects/Lead/listViews/Lead_Status_Initial_Contact_5.listView-meta.xml
<ListView>
    <fullName>Lead_Status_Initial_Contact_5</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Initial Contact</value>
    </filters>
    <label>Lead Status = Initial Contact 5%</label>
</ListView>