force-app/main/default/objects/Lead/listViews/Leads_Jim_Strickland.listView-meta.xml
<ListView>
    <fullName>Leads_Jim_Strickland</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.INDUSTRY</columns>
    <columns>Industry_Segment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Strickland</value>
    </filters>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Business_Development</value>
    </filters>
    <label>Leads - Jim Strickland</label>
</ListView>