force-app/main/default/objects/Lead/listViews/Leads_with_NDA_s.listView-meta.xml
<ListView>
    <fullName>Leads_with_NDA_s</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NDA__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Contacted Decision Maker,Contacted Decision Maker - 15%</value>
    </filters>
    <label>Leads with NDA&apos;s</label>
</ListView>